edit button in profile alignment correction

--- a/EcommerceWebsite/client/src/styles/profile.css
+++ b/EcommerceWebsite/client/src/styles/profile.css
@@ -19,7 +19,7 @@
 }
 
 .edit-profile {
-    padding: .1rem .9rem;
+    padding: .1rem .5rem;
     display: inline-block;
     border: 1px solid;
     border-radius: .9rem;
